Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17546

SPATIAL INDEX should not be allowed for FOREIGN KEY

    XMLWordPrintable

Details

    Description

      Bug#27912873 CRASH: SEGMENTATION FAULT IN HA_INNOBASE::INDEX_TYPE() blocks SPATIAL INDEX from being considered for FOREIGN KEY. No test case was included, and I was unable to come up with one that would not reject the FOREIGN KEY.

      That said, the function dict_foreign_qualify_index() should reject both FULLTEXT INDEX and SPATIAL INDEX, and its callers should not check for these.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.